# eclipse-simulator

./: .gitignore  EclipseSimulator.ui
EclipseSimulator/: BattleStateMachine.cpp  BattleStateMachine.hpp  CMakeLists.txt  DamageApplier.cpp  DamageApplier.hpp  EclipseMainWindow.cpp  EclipseMainWindow.hpp  EclipseSimulator.pro  EclipseSimulator.ui  EclipseSimulatorMainWindow.ui  GuiShip.cpp  GuiShip.hpp  Main.cpp  ShipGraphicsManager.cpp  ShipGraphicsManager.hpp  ShipInterface.hpp  ShipSpec.hpp  ShipSpecEditor.ui  ShipSpecEditorDialog.cpp  ShipSpecEditorDialog.hpp  ShipWidgetController.cpp  ShipWidgetController.hpp  Simulation.cpp  Simulation.hpp  mainwindow.cpp  mainwindow.h
EclipseSimulator/test/: doit.sh  simulate.cpp
